update spring boot parent version and prepare for JDK 17 compatibility